--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "keythereum": "^1.0.2",
     "lodash": "^4.17.11",
     "openzeppelin-solidity": "^2.0.0",
+    "truffle": "^5.0.0",
     "utf8": "^3.0.0"
   }
 }
